<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/personal_information_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_default_10_dimen"
        app:cardElevation="@dimen/margin_default_10_dimen"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_default_10_dimen"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/defaul_text_size_20_sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="@dimen/margin_default_10_dimen"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/phone_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_phone"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/mobile_phone_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_information_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_default_10_dimen"
        app:cardElevation="@dimen/margin_default_10_dimen"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_default_10_dimen"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_information"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/defaul_text_size_20_sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="@dimen/margin_default_10_dimen"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/user_email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/user_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/location_information_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_default_10_dimen"
        app:cardElevation="@dimen/margin_default_10_dimen"
        android:layout_marginTop="@dimen/margin_default_20_dimen"
        android:layout_marginStart="@dimen/margin_default_20_dimen"
        android:layout_marginEnd="@dimen/margin_default_20_dimen"
        android:layout_marginBottom="@dimen/margin_default_10_dimen"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_default_10_dimen"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_information"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/defaul_text_size_20_sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="@dimen/margin_default_10_dimen"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/street_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/city_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/state_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:layout_weight="5"
                    />

                <TextView
                    android:id="@+id/country_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_loading_string"
                    android:textAlignment="textEnd"
                    android:layout_weight="5"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/location_information_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_default_10_dimen"
            app:cardElevation="@dimen/margin_default_10_dimen"
            android:layout_marginTop="@dimen/margin_default_20_dimen"
            android:layout_marginStart="@dimen/margin_default_20_dimen"
            android:layout_marginEnd="@dimen/margin_default_20_dimen"
            android:layout_marginBottom="@dimen/margin_default_20_dimen"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_information"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/defaul_text_size_20_sp"
                    />

                <fragment
                    android:id="@+id/location_map_fg"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_default_10_dimen"
                    android:layout_marginBottom="@dimen/margin_default_20_dimen"
                    tools:context=".view.activity.MapsActivity" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>